# terra

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  history.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
--name/: package.json
--name/src-tauri/: tauri.conf.json
docs/: IMPLEMENTATION_PLAN.md  PAGINATION_PLAN.md  POLISH_PLAN.md  ROADMAP.md
scripts/: extract_metadata.py  test_extract_metadata.py
src/: App.jsx  App.test.jsx  config.js  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  imports.rs  lib.rs  main.rs  media.rs  metadata_enrich.rs  thumbnails.rs
src/components/: AddToAlbumModal.jsx  AddToAlbumModal.test.jsx  ArchiveView.jsx  ArchiveView.test.jsx  CloudProviderButton.jsx  CreateAlbumModal.jsx  CreateAlbumModal.test.jsx  DitherBackground.jsx  DitherBackground.test.jsx  DuplicateReviewGallery.jsx  DuplicateReviewGallery.test.jsx  ErrorBoundary.jsx  ErrorBoundary.test.jsx  ImportWizard.jsx  ImportWizard.test.jsx  PhotoCard.jsx  PhotoCard.test.jsx  PhotoGrid.jsx  PhotoGrid.test.jsx  PhotoModal.jsx  PhotoModal.test.jsx  ScanModal.jsx  ScanModal.test.jsx  ScreenshotReviewGallery.jsx  ScreenshotReviewGallery.test.jsx  SelectionToolbar.jsx  SelectionToolbar.test.jsx  SettingsModal.jsx  Sidebar.jsx  Sidebar.test.jsx  Skeleton.jsx  Skeleton.test.jsx  SmartCollections.jsx  StorageAnalytics.jsx  TagManager.jsx  TerraFormReview.jsx  Tooltip.jsx  Tooltip.test.jsx  VideoPlayer.jsx  VideoPlayer.test.jsx
src/contexts/: AppContext.jsx  SelectionContext.jsx  ThemeContext.jsx  ViewContext.jsx
src/hooks/: useAlbums.js  useAlbums.test.js  useCleanup.js  useCleanup.test.js  useFocusTrap.js  useFocusTrap.test.jsx  useKeyboardShortcuts.js  useKeyboardShortcuts.test.js  usePagedPhotos.js  usePagedPhotos.test.js  usePhotos.js  usePhotos.test.js  useResponsiveColumns.js  useSelection.js  useSelection.test.js  useTags.js  useTags.test.js
src/test/: setup.js
src/utils/: groupPhotos.js  groupPhotos.test.js  photoHelpers.js  photoHelpers.test.js  viewFilter.js  viewFilter.test.js
