[package]
name = "terra"
version = "0.1.0"
description = "High-performance local photo gallery for macOS"
authors = ["Terra Team"]
edition = "2021"

[lib]
name = "terra_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
kamadak-exif = "0.5"
image = "0.25"
chrono = "0.4"
rayon = "1.10"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-shell = "2"
